add snack restock API
